--- a/docs.html
+++ b/docs.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/utilities.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-  <title>Traversy | Responsible Rebuild from Scratch</title>
+  <title>The Nostradamus All Gold Funds</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
 <!-- Navbar-->
   <div class="navbar">
     <div class="container flex">
-      <h1 class="logo">Loruki</h1>
+      <h1 class="logo">Go Gold</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
